# 2D-physics-engine

./: .gitignore  README.md  TUNING_RECOMMENDATIONS.md  debug_collision.py  debug_normal.py  issues.md  pyproject.toml  run.py  simple_debug.py  test_collision_response.py  test_resting.py  test_restitution.py  test_revolute_joint.py  test_simple_physics.py  test_step_by_step.py
.github/workflows/: ci.yml
examples/: __init__.py  __main__.py  bullet.py  car.py  friction_test.py  joints_demo.py  ragdoll.py  stacking.py  stress_test.py
src/: __init__.py  main.py  version.py
src/collision/: __init__.py  broadphase.py  contact.py  manifold.py  narrowphase.py  sat.py
src/common/: __init__.py  color.py  constants.py  exceptions.py  profile.py  timer.py
src/constraints/: distance.py  gear.py  joint.py  mouse.py  prismatic.py  pulley.py  revolute.py  weld.py
src/contacts/: contact_solver.py
src/core/: aabb.py  body.py  circle.py  edge.py  polygon.py  shape.py
src/debug/: debug_draw.py  pygame_draw.py
src/dynamics/: force.py  integrator.py  island.py  solver.py  world.py
src/math/: mat22.py  transform.py  utils.py  vec2.py
tests/: test_collision.py  test_collision_response.py  test_joints.py  test_math.py  test_resting.py  test_restitution.py  test_revolute_joint.py  test_simple_physics.py  test_solver.py  test_stability.py  test_step_by_step.py
tools/: benchmark.py  export_svg.py  scene_editor.py
